Maybe fix background image not showing

--- a/client/app/global.scss
+++ b/client/app/global.scss
@@ -33,7 +33,7 @@ body {
     &::before {
       content: "";
       position: fixed;
-      background: #040404 url("/bg.jpg") top right no-repeat;
+      background: #191919 url("/background-image.jpg") top right no-repeat;
       background-size: cover;
       left: 0;
       right: 0;
@@ -60,7 +60,7 @@ body {
 
 @media(min-width: 2560px) {
   body::before {
-    background: #040404 url("../public/bg-ultrawide.jpg") top right no-repeat;
+    background: #191919 url("/background-image-ultrawide.jpg") top right no-repeat;
   }
 }
 
